--- a/css/base/common.css
+++ b/css/base/common.css
@@ -12,7 +12,6 @@
 .list {
   list-style: none;
 }
-
 /* скинув підкреслення */
 .link {
   text-decoration: none;
@@ -46,6 +45,48 @@ img {
 |------|OFF/ДЕФОЛТНІ СКИДАННЯ/RESET|------|
 |=====================================|
 */
+
+/* продивитись ці стилі */
+/* body {
+  font-family: Inter, sans-serif;
+  background-color: #0e1823;
+}
+
+.container {
+  max-width: 375px;
+  padding: 0px 20px;
+  margin: 0 auto;
+}
+
+section {
+  padding: 40px 0px;
+}
+
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    padding: 0px 32px;
+  }
+
+  section {
+    padding: 75px 0px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+    padding: 0px 50px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .container {
+    max-width: 1440px;
+  }
+} */
+
 /*
 |------------COLORS/FONTS/OTHER----------|
 |----прописати зрозумілі значення для кольрів:----|
